practice css template-2

--- a/src/component/hero.hbs
+++ b/src/component/hero.hbs
@@ -1,4 +1,5 @@
 <div>
       <h1 class="hero_title">{{title}}</h1>
       <p class="hero_text">{{text}}</p>
+      <button class="hero_button" href="{{button.url}}">{{button.text}}</button>
 </div>
