lesson about GRID

--- a/src/container/template-5.hbs
+++ b/src/container/template-5.hbs
@@ -41,9 +41,17 @@
 
   </form>
   {{/with}}
+
+
+  {{#each advantages}}
+  <div class="advantage">
+    <strong>{{title}}</strong>
+    <p>{{text}}</p>
+  </div>
+  {{/each}}
+
+
 </main>
-
-
 
 <div class="advantages">
   {{#each advantages}}
@@ -53,6 +61,8 @@
   </div>
   {{/each}}
 </div>
+
+
 
 
 
