--- a/public/css/template-5.css
+++ b/public/css/template-5.css
@@ -136,8 +136,8 @@
 
 .messages {
 
-  max-width: 620px;
-  width: 100%;
+  /* max-width: 620px;
+  width: 100%; */
 
   background-color: var(--color-white);
   border-radius: var(--border-radius-d);
@@ -217,7 +217,8 @@
   gap: var(--space-l);
 }
 
-.advantages>div {
+.advantages>div,
+.advantage {
   display: flex;
   flex-direction: column;
   border: 1px solid #E4EAF2;
@@ -225,16 +226,18 @@
   padding: var(--space-l);
   gap: var(--space-s);
 
-  width: 100%;
+  /* width: 100%; */
 }
 
-.advantages>div>strong {
+.advantages>div>strong,
+.advantage>strong {
   color: var(--color-title);
   font-weight: var(--weight-title);
   font-size: 18px;
 }
 
-.advantages>div>p {
+.advantages>div>p,
+.advantages>p {
   color: #767676;
   font-size: var(--size-d);
   line-height: 150%;
@@ -242,8 +245,8 @@
 
 
 .form {
-  max-width: 340px;
-  width: 100%;
+  /* max-width: 340px;
+  width: 100%; */
 
   background-color: var(--color-white);
   border-radius: var(--border-radius-d);
@@ -334,3 +337,126 @@
   font-size: var(--size-d);
   cursor: pointer;
 }
+
+.advantages {
+  display: grid;
+
+  height: 800px;
+
+  /* 1fr - одиниця пропорції */
+  /* grid-template-columns: 6fr 4fr 7fr; */
+
+  /* auto-fill - Автоматично створить стільки стовпців або рядків, скільки може вмістити доступний простір, зберігаючи мінімальний
+  розмір для елементів сітки */
+  /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
+
+  /* auto-fit - Працює так само як auto-fill, але видаляє порожні рядки та стовпці, щоб елементи повністю заповнили простір */
+
+  /* grid-template-rows: 1fr; */
+
+  /* grid-template-rows: repeat(2, 1fr); */
+  grid-template-columns: repeat(2, 1fr);
+
+  place-content: flex-end flex-end;
+
+  justify-items: flex-end;
+
+  grid-auto-rows: 200px;
+  align-items: center;
+}
+
+.main {
+  display: grid;
+
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-rows: repeat(3, min-content); */
+  grid-template-rows: repeat(3, 1fr);
+
+  /* grid-area — це також властивість, яка дозволяє вказати
+розташування елемента на сітці, є скороченням для
+властивостей grid-column та grid-row */
+
+  /* grid-template-areas: 'messages messages form' 'advantages advantages advantages'; */
+
+  grid-auto-rows: 2fr;
+}
+
+.messages {
+  /* grid-area: messages; */
+
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.form {
+  /* grid-area: form; */
+
+  grid-column: 3/4;
+  grid-row: 1/3;
+}
+
+.advantages {
+  /* grid-area: advantages; */
+
+  /* grid-column: 1/3; */
+  grid-row: 3/4;
+}
+
+.advantage {
+  height: 100%;
+}
+
+.footer {
+  display: grid;
+
+  grid-template-columns: repeat(4, 1fr);
+
+  /* grid-auto-columns — це CSS властивість,
+  яка визначає розмір стовпців,
+  які були вбудовані поза шаблоном  */
+  /* grid-auto-columns: 2fr; */
+
+
+
+  /* grid-auto-flow — це CSS властивість,
+  яка визначає, як елементи за замовчування розміщуються  
+
+  dense - Елементи розміщуються якомога ближче один 
+  до одного, заповнюючи всі можливі проміжки*/
+  grid-auto-flow: row dense;
+}
+
+.footer>div:first-of-type {
+
+  /* grid-column — це CSS властивість, яка встановлює від якого та по який стовпець буде відображатись елемент  */
+  /* grid-column: 1/3; */
+
+  /* grid-row — це CSS властивість,
+  яка встановлює від якого та по який рядок буде відображатись елемент */
+  /* grid-row: 1/3; */
+
+  /* grid-column: 1/3;
+  background-color: rgb(252, 166, 166); */
+
+
+}
+
+/* .footer>div {
+  background-color: #98a1a8;
+} */
+
+.footer>div:last-of-type {
+  /* grid-column: 4/6; */
+}
+
+.footer>div:nth-of-type(2) {
+  /* grid-column: 1/3;
+  background-color: rgb(129, 138, 252); */
+}
+
+/* .footer>div:nth-of-type(2) {
+
+  order — це CSS властивість, яка використовується
+  для зміни порядку розміщення елементів
+  order: -1;
+} */
