--- a/src/container/template-1.hbs
+++ b/src/container/template-1.hbs
@@ -10,7 +10,7 @@
 
             {{!-- {{>nav-template-1 list=header isVertical=true}} --}}
 
-            {{>nav-template list=header}}
+            {{>nav list=header}}
 
           </div>
         </nav>
@@ -43,7 +43,7 @@
         {{#each footer}}
         <div class="col-3">
           <span class="footer_title">{{title}}</span>
-          <span class="footer_links">{{>nav-template list=links isVertical=true}}</span>
+          <span class="footer_links">{{>nav list=links isVertical=true}}</span>
         </div>
         {{/each}}
 
