--- a/src/container/template-2.hbs
+++ b/src/container/template-2.hbs
@@ -9,7 +9,7 @@
         </div>
         <nav class="header_nav col-9">
           <div class="header_nav_right">
-            {{>nav-template list=header}}
+            {{>nav list=header}}
           </div>
         </nav>
       </div>
@@ -94,7 +94,7 @@
         {{#each footer}}
         <div class="col-3">
           <span class="footer_title">{{title}}</span>
-          <span class="footer_links">{{>nav-template list=links isVertical=true}}</span>
+          <span class="footer_links">{{>nav list=links isVertical=true}}</span>
         </div>
         {{/each}}
       </div>
