template-7 done all

--- a/public/css/template-7.css
+++ b/public/css/template-7.css
@@ -13,19 +13,26 @@
   --size-b: 24px;
 
   --color-line: #dee2e6;
+  --color-line-2: #253041;
   --color-border: #d3dee9;
   /* --color-border-2: #E4EAF2; */
   --color-primary: #563d7c;
+  --color-purple: #885FFB;
   --color-white: #ffffff;
   --color-dark: #111827;
   --color-title: #212529;
   --color-text: #343a40;
+  --color-text-2: #9CA3AF;
   --color-link: #0D6EFD;
+  --color-background: #8eb6e0;
   /* --color-link-2: #007BFF; */
 
-  --border-radius-d: 12px;
+
   --border-radius-s: 4px;
+  --border-radius-xs: 10px;
+  --border-radius-d: 12px;
   --border-radius-b: 24px;
+
   --weight-title: 600;
   --weight-text: 400;
 }
@@ -53,9 +60,9 @@
 /* ================================================ */
 
 .nav_link {
-  color: #FFF;
+  color: var(--color-white);
 
-  font-size: 16px;
+  font-size: var(--size-d);
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
@@ -75,7 +82,7 @@
   padding: var(--space-l) 0;
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #253041;
+  border-bottom: 1px solid var(--color-line-2);
 }
 
 .logo {
@@ -83,28 +90,28 @@
   padding: 8px 12px;
   align-items: flex-start;
 
-  color: #FFF;
+  color: var(--color-white);
 
-  font-size: 14px;
-  font-style: normal;
+  font-size: var(--size-s);
+  /* font-style: normal; */
   font-weight: 700;
   line-height: 100%;
 
-  border-radius: 10px;
-  background: #885FFB;
+  border-radius: var(--border-radius-xs);
+  background-color: var(--color-purple);
 }
 
 .header_nav {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: var(--space-l);
 }
 
 
 
 .ad {
   display: flex;
-  padding-top: 12px;
+  padding-top: var(--space-m);
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
@@ -112,29 +119,29 @@
 
 .ad_logo {
   padding: 2px 6px;
-  border-radius: 4px;
+  border-radius: var(--border-radius-s);
   background: rgba(136, 95, 251, 0.20);
 
-  color: #885FFB;
-  font-size: 14px;
+  color: var(--color-purple);
+  font-size: var(--size-s);
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
 }
 
 .ad_link {
-  color: #FFF;
+  color: var(--color-white);
 
-  font-size: 14px;
+  font-size: var(--size-s);
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
 }
 
 .ad_user {
-  color: #FFF;
+  color: var(--color-white);
 
-  font-size: 14px;
+  font-size: var(--size-s);
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
@@ -149,13 +156,13 @@
 
   justify-content: space-between;
 
-  border-top: 1px solid #253041;
+  border-top: 1px solid var(--color-line-2);
 }
 
 .footer_copyright {
-  color: #9CA3AF;
+  color: var(--color-text-2);
 
-  font-size: 16px;
+  font-size: var(--size-d);
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
@@ -165,11 +172,11 @@
   display: flex;
   /* justify-content: flex-end; */
   /* align-items: center; */
-  gap: 16px;
+  gap: var(--space-xm);
 
-  color: #FFF;
+  color: var(--color-white);
   /* text-align: right; */
-  font-size: 16px;
+  font-size: var(--size-d);
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
@@ -194,43 +201,41 @@
   gap: 20px;
   align-self: stretch;
 
-  border-radius: 24px;
+  border-radius: var(--border-radius-b);
   background: radial-gradient(632.95% 141.42% at 100.00% 100.00%, rgba(17, 24, 39, 0.00) 0%, rgba(78, 63, 146, 0.60) 100%);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
 }
 
 .hero_title {
   font-size: 36px;
-  color: #ffffff;
+  color: var(--color-white);
   font-weight: 500;
   text-align: center;
-  /* margin-bottom: 20px; */
   width: 600px;
 }
 
 .hero_text {
-  font-size: 20px;
-  color: #ffffff;
+  font-size: var(--size-l);
+  color: var(--color-white);
   text-align: center;
-  /* align-items: center; */
+
   width: 600px;
-  /* margin-bottom: 20px; */
 }
 
 .hero_button {
   /* text-decoration: none; */
 
-  background: #885FFB;
+  background-color: var(--color-purple);
   font-size: 18px;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: var(--border-radius-xs);
   max-width: 150px;
   width: 100%;
   min-width: fit-content;
 }
 
 .hero_button:hover {
-  background: #8eb6e0;
+  background-color: var(--color-background);
 }
 
 .about {
@@ -238,25 +243,25 @@
   padding: 32px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
+  gap: var(--space-xm);
   align-self: stretch;
 
-  border-radius: 24px;
+  border-radius: var(--border-radius-b);
   background: rgba(42, 49, 65, 0.44);
   backdrop-filter: blur(25px);
 }
 
 .about_title {
-  color: #FFF;
-  font-size: 24px;
+  color: var(--color-white);
+  font-size: var(--size-b);
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
 }
 
 .about_text {
-  color: #9CA3AF;
-  font-size: 14px;
+  color: var(--color-text-2);
+  font-size: var(--size-s);
   font-style: normal;
   font-weight: 400;
   line-height: 170%;
@@ -273,12 +278,12 @@ main {
   justify-content: center;
   align-items: center;
 
-  color: #FFF;
+  color: var(--color-white);
   font-style: normal;
   font-weight: 700;
   line-height: 100%;
 
-  border-radius: 10px;
+  border-radius: var(--border-radius-xs);
 }
 
 .articles {
@@ -289,7 +294,7 @@ main {
 }
 
 .articles_title {
-  color: #FFF;
+  color: var(--color-white);
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
@@ -301,17 +306,17 @@ main {
   padding: 12px 20px;
   justify-content: center;
   align-items: center;
-  gap: 8px;
+  gap: var(--space-s);
 
-  font-size: 16px;
+  font-size: var(--size-d);
   color: var(--color-white);
 
-  border-radius: 10px;
-  border: 1px solid #9CA3AF;
+  border-radius: var(--border-radius-xs);
+  border: 1px solid var(--color-text-2);
 }
 
 .articles_button:hover {
-  background: #8eb6e0;
+  background-color: var(--color-background);
 }
 
 .cards {
@@ -325,7 +330,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
+  gap: var(--space-xm);
   flex: 1 0 0;
   width: 100%;
 }
@@ -337,6 +342,26 @@ main {
   background: lightgray 50% / cover no-repeat;
 
   border-radius: var(--border-radius-b);
+  position: relative;
+}
+
+.isNew {
+  padding: 2px 6px;
+  border-radius: var(--border-radius-s);
+  background: rgba(251, 95, 95, 0.50);
+
+  color: var(--color-white);
+
+  font-size: var(--size-d);
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+}
+
+.isNew {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
 }
 
 .card_title {
@@ -350,24 +375,25 @@ main {
 .card_text {
   align-self: stretch;
 
-  color: #9CA3AF;
-  font-size: 14px;
+  color: var(--color-text-2);
+  font-size: var(--size-s);
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
 }
 
 .card_button {
-  text-decoration: none;
   display: flex;
+  text-decoration: none;
+
   padding: 8px 16px;
   justify-content: center;
   align-items: center;
-  gap: 8px;
+  gap: var(--space-s);
 
-  background: #885FFB;
+  background-color: var(--color-purple);
 }
 
 .card_button:hover {
-  background: #8eb6e0;
+  background-color: var(--color-background);
 }
