--- a/src/component/articleCardDark.hbs
+++ b/src/component/articleCardDark.hbs
@@ -1,6 +1,10 @@
 <div class="card">
 
-  <div class="card_image" style="background-image: url({{photo}});"></div>
+  <div class="card_image" style="background-image: url({{photo}});">
+    <div class="{{#if isNew}}isNew{{/if}}">
+      {{#if isNew}}NEW{{/if}}
+    </div>
+  </div>
   <h2 class="card_title">{{name}}</h2>
   <p class="card_text">{{description}}</p>
   <a class="button card_button" href="#">Read All</a>
