--- a/public/css/template-4.css
+++ b/public/css/template-4.css
@@ -41,6 +41,7 @@
   gap: 80px;
 }
 
+.fghjdkj ()
 /* ========================================== */
 
 .header {
@@ -124,7 +125,7 @@
 .hero {
   display: flex;
   align-items: center;
-  gap: var(--space-xb);  
+  gap: var(--space-xb);
 }
 
 .hero_image {
@@ -158,12 +159,12 @@
 .button {
   display: inline-block;
   font-size: var(--size-d);
-  text-decoration: none;  
+  text-decoration: none;
   border-radius: var(--border-radius-sm);
 }
 
-.hero_button {  
-  padding: var(--space-m) var(--space-xm);  
+.hero_button {
+  padding: var(--space-m) var(--space-xm);
   background-color: #6C757D;
   color: var(--color-white);
 }
@@ -201,14 +202,14 @@
   font-size: 32px;
   font-weight: var(--weight-title);
   color: var(--color-title);
-  
+
 }
 
 .card_text {
   font-weight: var(--weight-text);
   font-size: var(--size-d);
   color: var(--color-text);
-  
+
 }
 
 
