--- a/src/layout/template-8.hbs
+++ b/src/layout/template-8.hbs
@@ -1,61 +1,76 @@
 <html>
 
-<head>
-  <title>
-    {{page.title}}
-  </title>
-  <meta charset='utf-8' />
+  <head>
+    <title>
+      {{page.title}}
+    </title>
+    <meta charset='utf-8' />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/fav/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/fav/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/fav/favicon-16x16.png">
-  <link rel="manifest" href="/fav/site.webmanifest">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+    <link
+      rel='apple-touch-icon'
+      sizes='180x180'
+      href='/fav/apple-touch-icon.png'
+    />
+    <link
+      rel='icon'
+      type='image/png'
+      sizes='32x32'
+      href='/fav/favicon-32x32.png'
+    />
+    <link
+      rel='icon'
+      type='image/png'
+      sizes='16x16'
+      href='/fav/favicon-16x16.png'
+    />
+    <link rel='manifest' href='/fav/site.webmanifest' />
+    <meta
+      name='msapplication-TileColor'
+      content='#da532c'
+    />
+    <meta name='theme-color' content='#ffffff' />
 
-  <link href='css/normalize.css' rel='stylesheet' />
+    <link href='css/normalize.css' rel='stylesheet' />
 
+    {{! ↙вставляти для роботи bootstrap }}
 
-
-  {{!-- ↙вставляти для роботи bootstrap --}}
-
-  {{!--
+    {{!
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> --}}
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> }}
 
-  {{! ↓ підключаємо іконки bootstrap --}}
+    {{! ↓ підключаємо іконки bootstrap }}
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link
+      rel='stylesheet'
+      href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css'
+    />
 
-  {{! ↓ підключаємо іконки fontawesome.com --}}
+    {{! ↓ підключаємо іконки fontawesome.com }}
 
-  <script src="https://kit.fontawesome.com/0c753befba.js" crossorigin="anonymous"></script>
+    <script
+      src='https://kit.fontawesome.com/0c753befba.js'
+      crossorigin='anonymous'
+    ></script>
 
-  <link href='css/template-3-1.css' rel='stylesheet' />
-</head>
+    <link href='css/template-8.css' rel='stylesheet' />
+  </head>
 
-<body>
+  <body>
 
+    {{!-- {{>nav-shop}} --}}
 
-
-
-  {{!-- {{>nav-shop}} --}}
-
-
-
-  {{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
-  <div class="page">
-    <div class="page_content">
-      {{{body}}}
+    {{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
+    <div class='page'>
+      <div class='page_content'>
+        {{{body}}}
+      </div>
     </div>
-  </div>
 
+    {{! ↙вставляти для роботи bootstrap }}
 
-  {{!-- ↙вставляти для роботи bootstrap --}}
+    {{!
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script> }}
 
-  {{!--
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script> --}}
-
-</body>
+  </body>
 
 </html>
