--- a/src/layout/template-3-1.hbs
+++ b/src/layout/template-3-1.hbs
@@ -52,7 +52,7 @@
       crossorigin='anonymous'
     ></script>
 
-    <link href='css/template-8.css' rel='stylesheet' />
+    <link href='css/template-3-1.css' rel='stylesheet' />
   </head>
 
   <body>
