--- a/public/css/slack.css
+++ b/public/css/slack.css
@@ -188,6 +188,43 @@ body {
     background-image: url('/img/features.png');
     background-repeat: no-repeat;
     background-position: top right;
+
+  }
+
+  .features_text {
+    /* padding-top: 50px; */
+    /* padding-bottom: 50px; */
+    height: 100%;
+    /* width: 50%; */
+    /* margin-left: auto; */
+    /* text-align: left; */
+    gap: var(--spasing-5);
+    display: grid;
+  }
+
+  /* Другий блок futures */
+  .features_section2 {
+    /* padding-top: 100px; */
+    padding-bottom: 100px;
+
+    display: grid;
+    gap: var(--spasing-5);
+
+    background-image: url('/img/features2.png');
+    /* background-size: 500px 400px; */
+    background-repeat: no-repeat;
+    background-position: top left;
+  }
+
+  .features_text2 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    height: 100%;
+    width: 50%;
+    margin-left: auto;
+    text-align: left;
+    gap: var(--spasing-5);
+    display: grid;
   }
 
   .features_title {
@@ -196,7 +233,7 @@ body {
 
   .features_description {
     font-size: var(--size-2);
-    max-width: 520px;
+    max-width: 500px;
     line-height: var(--line-height-2);
   }
 
@@ -204,9 +241,14 @@ body {
     padding: var(--spasing-3);
     background-color: var(--color-white);
     display: grid;
-    gap: var(--spasing-4);
+    /* gap: var(--spasing-2); */
 
     /* grid-template-rows: min-content min-content 1fr min-content; */
+  }
+
+  .feat_card_description {
+    word-wrap: break-word;
+    width: 27ch;
   }
 
   .feat_card>p {
@@ -215,6 +257,7 @@ body {
 
   .feat_link {
     justify-self: flex-end;
+    align-self: flex-end;
   }
 
   .features_grid_4 {
@@ -230,7 +273,51 @@ body {
     grid-row: 1/3;
   }
 
+  /* Другий блоку futures */
+  .features_grid_3 {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto auto;
+
+    gap: var(--spasing-3);
+  }
+
+  .features_grid_3>.feat_card {
+    box-sizing: border-box;
+  }
+
+  .features_grid_3>.feat_card:nth-child(1) {
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 2;
+
+    /* height: 250px; */
+    /* width: 300px; */
+
+  }
+
+  .features_grid_3>.feat_card:nth-child(2) {
+    grid-column: 3 / span 1;
+    grid-row: 1 / span 2;
+
+    /* height: 250px; */
+    /* width: 300px; */
+
+  }
+
+  .features_grid_3>.feat_card:nth-child(3),
+  .features_grid_3>.feat_card:nth-child(4) {
+    grid-column: 4;
+
+
+    /* height: 1fr; */
+    /* width: 1fr; */
+  }
+
+
 }
+
+
+
 
 @layer adaptive {
   @media all and (min-width: 1260px) {
@@ -253,6 +340,8 @@ body {
     .hero_content {
       max-width: 425px;
     }
+
+
   }
 
   @media all and (1000px <=width < 1260px) {
@@ -280,6 +369,32 @@ body {
       max-width: 100%;
       margin-top: 100px;
     }
+
+    .features_grid_3 {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: auto auto;
+      gap: var(--spasing-3);
+    }
+
+    .features_grid_3>.feat_card {
+      box-sizing: border-box;
+    }
+
+    .features_grid_3>.feat_card:nth-child(1) {
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 2;
+    }
+
+    .features_grid_3>.feat_card:nth-child(2) {
+      grid-column: 3 / span 1;
+      grid-row: 1 / span 2;
+    }
+
+    .features_grid_3>.feat_card:nth-child(3),
+    .features_grid_3>.feat_card:nth-child(4) {
+      grid-column: 4;
+    }
   }
 
   @media all and (width < 1000px) {
@@ -303,12 +418,51 @@ body {
       max-width: 100%;
     }
 
+
+    .features_text2 {
+      padding-top: 0;
+      padding-bottom: 0;
+
+    }
+
+    .features_section,
+    .features_section2 {
+      background-size: 250px 200px;
+    }
+
+
     .features_grid_4 {
       grid-template-columns: repeat(3, 1fr);
     }
 
     .features_grid_4>.feat_card:first-of-type {
       grid-row: 1/3;
+    }
+
+    .features_grid_3 {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: auto auto auto;
+      gap: var(--spasing-3);
+    }
+
+    .features_grid_3>.feat_card {
+      box-sizing: border-box;
+    }
+
+    .features_grid_3>.feat_card:nth-child(1) {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 2;
+    }
+
+    .features_grid_3>.feat_card:nth-child(2) {
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 2;
+    }
+
+    .features_grid_3>.feat_card:nth-child(3),
+    .features_grid_3>.feat_card:nth-child(4) {
+      grid-column: 3;
     }
   }
 
@@ -325,34 +479,84 @@ body {
 
   @media all and (width < 600px) {
 
-    .features_section {
+    .features_section,
+    .features_section2 {
       background-image: none;
     }
+
+    .features_text,
+    .features_text2 {
+      padding-top: 0;
+      padding-bottom: 50px;
+      height: 100%;
+      width: 100%;
+
+    }
+
+
 
     .features_grid_4 {
       grid-template-columns: repeat(2, 1fr);
     }
+
+    .features_grid_3 {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .features_grid_3>.feat_card:nth-child(1) {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 2;
+    }
+
+    .features_grid_3>.feat_card:nth-child(2) {
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 2;
+    }
+
+    .features_grid_3>.feat_card:nth-child(3),
+    .features_grid_3>.feat_card:nth-child(4) {
+      grid-column: auto;
+    }
   }
 
-  @media all and (width < 400px) {
+  @media all and (width < 545px) {
     .hero_buttons {
       grid-template-columns: 1fr;
       gap: var(--spasing-2);
     }
 
     .hero_section {
-      min-height: 1180px;
+      min-height: 1280px;
     }
 
     .features_grid_4 {
       grid-template-columns: repeat(1, 1fr);
     }
+
+    .features_grid_3 {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .features_grid_3>.feat_card:nth-child(1) {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    .features_grid_3>.feat_card:nth-child(2) {
+      grid-column: 1 / span 1;
+      grid-row: 2 / span 2;
+    }
+
+    .features_grid_3>.feat_card:nth-child(3),
+    .features_grid_3>.feat_card:nth-child(4) {
+      grid-column: 1;
+    }
   }
 
-  @media all and (width < 250px) {
+  @media all and (width < 280px) {
 
     .hero_section {
-      min-height: 1220px;
+      min-height: 1280px;
     }
   }
 
