slack create homework end

--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -1,10 +1,4 @@
 <body>
-  <script>
-    document.addEventListener("DOMContentLoaded", function()
-    { document.querySelectorAll('.feat_card').forEach(card
-    => { if (card.querySelector('.feat_card_description')) {
-    card.style.gap = 'var(--spasing-2)'; } }); });
-  </script>
 
   <div class='page'>
     <section class='page_section'>
@@ -256,6 +250,109 @@
           </div>
 
         </div>
+      </div>
+    </section>
+
+    <section class='deliveroo_section'>
+
+      <div class='deliveroo_card'>
+        <img
+          src='/img/deliveroo.png'
+          alt='deliveroo'
+          class='deliveroo_image'
+        />
+        <div class='deliveroo_content'>
+          <h1 class='deliveroo_title'>“The thing that keeps
+            us connected the most is Slack. It’s a very
+            immediate and straightforward method of
+            communication, and really the only channel that
+            people prefer and enjoy using.”</h1>
+          <img
+            src='/img/deliveroo_small.png'
+            alt='deliveroo'
+            class='deliveroo_small_image'
+          />
+          <p class='deliveroo_text'>Will Sprunt, CIO,
+            Deliveroo</p>
+        </div>
+
+      </div>
+
+    </section>
+
+    <section class='explore_section'>
+
+      <h2 class='explore_title'>
+        Explore more about working in Slack
+      </h2>
+
+      <div class='explore_grid'>
+
+        <div class='explore_card'>
+          <img
+            src='img/01_promo_media.png'
+            alt='deliveroo'
+            class='explore_image'
+          />
+          <div class='explore_content'>
+            <p class='explore_info'>Slack Tutorials
+            </p>
+            <h3 class='explore_text'>Slack 101</h3>
+
+          </div>
+          <div class='explore_action'>
+            <a class='form_button' href='#'>Learn more</a>
+            <a
+              href='#'
+              class='icon icon_arrow-blue click feat_link'
+            ></a>
+          </div>
+        </div>
+
+        <div class='explore_card'>
+          <img
+            src='img/02_promo_media.png'
+            alt='deliveroo'
+            class='explore_image'
+          />
+          <div class='explore_content'>
+            <p class='explore_info'>Slack vs. Email
+            </p>
+            <h3 class='explore_text'>An easier, more
+              organized way to work</h3>
+
+          </div>
+          <div class='explore_action'>
+            <a class='form_button' href='#'>Learn more</a>
+            <a
+              href='#'
+              class='icon icon_arrow-blue click feat_link'
+            ></a>
+          </div>
+        </div>
+
+        <div class='explore_card'>
+          <img
+            src='img/03_promo_media.png'
+            alt='deliveroo'
+            class='explore_image'
+          />
+          <div class='explore_content'>
+            <p class='explore_info'>Customer Stories
+            </p>
+            <h3 class='explore_text'>How Fastly uses Slack
+              Connect to wow enterprise customers</h3>
+
+          </div>
+          <div class='explore_action'>
+            <a class='form_button' href='#'>Learn more</a>
+            <a
+              href='#'
+              class='icon icon_arrow-blue click feat_link'
+            ></a>
+          </div>
+        </div>
+
       </div>
     </section>
 
