--- a/public/css/slack.css
+++ b/public/css/slack.css
@@ -29,11 +29,8 @@
     opacity: var(--opacity-2);
   }
 
-
-
   .icon {
     display: block;
-
     background-repeat: no-repeat;
     background-position: center center;
   }
@@ -79,8 +76,6 @@ body {
   --color-black: #000;
   --color-primary: #611F69;
   --color-light: #F4EDE4;
-
-
 
   --page-width-big: 1260px;
   --page-width-medium: 1000px;
@@ -133,11 +128,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     gap: 200px;
-
     height: 60vh;
-    /* min-height: 1080px; цей параметр переїхав у @media*/
   }
 
   .hero_content {
@@ -146,7 +138,6 @@ body {
     max-width: 425px;
     color: var(--color-black);
     position: relative;
-
   }
 
   .hero_label {
@@ -170,8 +161,6 @@ body {
     flex-wrap: wrap;
   }
 
-
-
   .hero_buttons {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -181,37 +170,26 @@ body {
   .features_section {
     padding-top: 150px;
     padding-bottom: 150px;
-
     display: grid;
     gap: var(--spasing-5);
-
     background-image: url('/img/features.png');
     background-repeat: no-repeat;
     background-position: top right;
-
   }
 
   .features_text {
-    /* padding-top: 50px; */
-    /* padding-bottom: 50px; */
     height: 100%;
-    /* width: 50%; */
-    /* margin-left: auto; */
-    /* text-align: left; */
     gap: var(--spasing-5);
     display: grid;
   }
 
-  /* Другий блок futures */
-  .features_section2 {
-    /* padding-top: 100px; */
-    padding-bottom: 100px;
+  /* ====== Другий блок futures ====== */
 
+  .features_section2 {
+    padding-bottom: 100px;
     display: grid;
     gap: var(--spasing-5);
-
     background-image: url('/img/features2.png');
-    /* background-size: 500px 400px; */
     background-repeat: no-repeat;
     background-position: top left;
   }
@@ -241,9 +219,6 @@ body {
     padding: var(--spasing-3);
     background-color: var(--color-white);
     display: grid;
-    /* gap: var(--spasing-2); */
-
-    /* grid-template-rows: min-content min-content 1fr min-content; */
   }
 
   .feat_card_description {
@@ -262,10 +237,8 @@ body {
 
   .features_grid_4 {
     display: grid;
-
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-
     gap: var(--spasing-3);
   }
 
@@ -273,12 +246,10 @@ body {
     grid-row: 1/3;
   }
 
-  /* Другий блоку futures */
   .features_grid_3 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto auto;
-
     gap: var(--spasing-3);
   }
 
@@ -289,34 +260,142 @@ body {
   .features_grid_3>.feat_card:nth-child(1) {
     grid-column: 2 / span 1;
     grid-row: 1 / span 2;
-
-    /* height: 250px; */
-    /* width: 300px; */
-
   }
 
   .features_grid_3>.feat_card:nth-child(2) {
     grid-column: 3 / span 1;
     grid-row: 1 / span 2;
-
-    /* height: 250px; */
-    /* width: 300px; */
-
   }
 
   .features_grid_3>.feat_card:nth-child(3),
   .features_grid_3>.feat_card:nth-child(4) {
     grid-column: 4;
+  }
 
+  /* ============ deliveroo_section =============== */
 
-    /* height: 1fr; */
-    /* width: 1fr; */
+  .deliveroo_section {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+  }
+
+  .deliveroo_card {
+    width: 1020px;
+    display: flex;
+    gap: var(--spasing-6);
+    padding-top: 72px;
+    padding-bottom: 72px;
+    justify-content: space-between;
+  }
+
+  .deliveroo_image {
+    max-width: 100%;
+    height: 228px;
+    justify-self: center;
+    align-self: center;
+  }
+
+  .deliveroo_content {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+    height: auto;
+    gap: var(--spasing-4);
+  }
+
+  .deliveroo_title {
+    font-size: var(--spasing-6);
+    line-height: 1.4;
+    max-width: 430px;
+    margin-right: 40px;
   }
 
 
+
+  /* ========== explore_section ================= */
+
+  .explore_section {
+    display: flex;
+    gap: var(--spasing-9);
+    padding-top: 72px;
+    padding-bottom: 72px;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    max-width: 100%;
+  }
+
+  .explore_title {
+    font-size: var(--spasing-7);
+  }
+
+  .explore_grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    width: 1020px;
+    justify-content: space-between;
+  }
+
+  .explore_grid>.explore_card:nth-child(1) {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+  }
+
+  .explore_grid>.explore_card:nth-child(2) {
+    grid-column: 3 / span 1;
+    grid-row: 1 / span 1;
+  }
+
+  .explore_grid>.explore_card:nth-child(3) {
+    grid-column: 5;
+    grid-row: 1 / span 1;
+  }
+
+  .explore_card {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .explore_content {
+    display: flex;
+    gap: var(--spasing-3);
+    justify-content: start;
+    flex-direction: column;
+    box-sizing: border-box;
+    padding: 12px;
+    height: 100%;
+  }
+
+  .explore_info {
+    font-size: var(--size-1);
+  }
+
+  .explore_text {
+    font-size: var(--spasing-5);
+  }
+
+  .explore_action {
+    display: flex;
+    justify-content: space-between;
+    padding: 12px;
+  }
+
+  .explore_action>a {
+    text-decoration: none;
+    color: #1264A3;
+  }
+
+  .icon_arrow-blue {
+    height: 14px;
+    width: 24px;
+    background-image: url('/svg/arrow-right-blue.svg');
+  }
+
 }
-
-
 
 
 @layer adaptive {
@@ -330,7 +409,6 @@ body {
       position: absolute;
       top: 0;
       left: 580px;
-
     }
 
     .page_content {
@@ -340,8 +418,6 @@ body {
     .hero_content {
       max-width: 425px;
     }
-
-
   }
 
   @media all and (1000px <=width < 1260px) {
@@ -370,37 +446,13 @@ body {
       margin-top: 100px;
     }
 
-    .features_grid_3 {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: auto auto;
-      gap: var(--spasing-3);
-    }
-
-    .features_grid_3>.feat_card {
-      box-sizing: border-box;
-    }
-
-    .features_grid_3>.feat_card:nth-child(1) {
-      grid-column: 2 / span 1;
-      grid-row: 1 / span 2;
-    }
-
-    .features_grid_3>.feat_card:nth-child(2) {
-      grid-column: 3 / span 1;
-      grid-row: 1 / span 2;
-    }
-
-    .features_grid_3>.feat_card:nth-child(3),
-    .features_grid_3>.feat_card:nth-child(4) {
-      grid-column: 4;
-    }
   }
 
   @media all and (width < 1000px) {
 
     .page_content {
       max-width: var(--page-width-small);
+
     }
 
     .hero_section {
@@ -430,20 +482,15 @@ body {
       background-size: 250px 200px;
     }
 
+    /* ============== features_grid (width < 1000px) */
 
     .features_grid_4 {
       grid-template-columns: repeat(3, 1fr);
     }
 
-    .features_grid_4>.feat_card:first-of-type {
-      grid-row: 1/3;
-    }
-
     .features_grid_3 {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: auto auto auto;
-      gap: var(--spasing-3);
     }
 
     .features_grid_3>.feat_card {
@@ -463,6 +510,67 @@ body {
     .features_grid_3>.feat_card:nth-child(3),
     .features_grid_3>.feat_card:nth-child(4) {
       grid-column: 3;
+    }
+
+    /* ============== deliveroo_section (width < 1000px) */
+
+    .deliveroo_card {
+      max-width: 600px;
+      display: grid;
+      gap: var(--spasing-9);
+      justify-content: space-evenly;
+    }
+
+    .deliveroo_content {
+      align-items: end;
+    }
+
+    /* ============== explore_grid (width < 1000px)= */
+
+    .explore_grid {
+      max-width: 700px;
+      grid-template-columns: repeat(3, 1fr);
+      gap: var(--spasing-9);
+
+    }
+
+    .explore_grid>.explore_card:nth-child(1) {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(2) {
+      grid-column: 3 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(3) {
+      grid-column: 1/ span 1;
+      grid-row: 2 / span 1;
+    }
+  }
+
+  @media all and (width < 800px) {
+    .explore_grid {
+      max-width: 600px;
+      grid-template-columns: repeat(3, 1fr);
+      gap: var(--spasing-5);
+
+    }
+
+    .explore_grid>.explore_card:nth-child(1) {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(2) {
+      grid-column: 3 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(3) {
+      grid-column: 1/ span 1;
+      grid-row: 3 / span 1;
     }
   }
 
@@ -493,8 +601,6 @@ body {
 
     }
 
-
-
     .features_grid_4 {
       grid-template-columns: repeat(2, 1fr);
     }
@@ -516,6 +622,47 @@ body {
     .features_grid_3>.feat_card:nth-child(3),
     .features_grid_3>.feat_card:nth-child(4) {
       grid-column: auto;
+    }
+
+    /* ============== deliveroo_section (width < 600px) */
+
+    .deliveroo_card {
+      max-width: 400px;
+      display: grid;
+      gap: var(--spasing-9);
+      justify-content: space-evenly;
+    }
+
+    .deliveroo_content {
+      align-items: end;
+    }
+
+    /* ============== explore_grid (width < 600px) */
+
+    .explore_title {
+      max-width: 250px;
+      line-height: 1.5;
+    }
+
+    .explore_grid {
+      max-width: 400px;
+      grid-template-columns: repeat(3, 1fr);
+      gap: var(--spasing-6);
+    }
+
+    .explore_grid>.explore_card:nth-child(1) {
+      grid-column: 2 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(2) {
+      grid-column: 2 / span 1;
+      grid-row: 3 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(3) {
+      grid-column: 2/ span 1;
+      grid-row: 5 / span 1;
     }
   }
 
@@ -550,6 +697,39 @@ body {
     .features_grid_3>.feat_card:nth-child(3),
     .features_grid_3>.feat_card:nth-child(4) {
       grid-column: 1;
+    }
+
+    /* ============== deliveroo_section (width < 545px) */
+
+    .deliveroo_card {
+      max-width: 250px;
+    }
+
+    /* ============== explore_grid (width < 545px) */
+
+    .explore_title {
+      max-width: 200px;
+      line-height: 1.5;
+    }
+
+    .explore_grid {
+      max-width: 250px;
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .explore_grid>.explore_card:nth-child(1) {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(2) {
+      grid-column: 1 / span 1;
+      grid-row: 3 / span 1;
+    }
+
+    .explore_grid>.explore_card:nth-child(3) {
+      grid-column: 1/ span 1;
+      grid-row: 5 / span 1;
     }
   }
 
